--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center" data-aos="fade-left">
-                    <img src="https://via.placeholder.com/300" alt="Ayush Gupta" class="profile-img">
+                    <img src="https://i.postimg.cc/0yp2rcg2/Office.png" alt="Ayush Gupta" class="profile-img">
                 </div>
             </div>
         </div>
@@ -936,21 +936,21 @@
                             </div>
                             <div>
                                 <h5>Email</h5>
-                                <p>ayush712gupta@gmail.com</p>
+                                <p>guptaayush8625@gmail.com</p>
                             </div>
                         </div>
                         
                         <div class="social-links">
-                            <a href="#" class="social-link">
+                            <a href="https://github.com/ayush712gupta" class="social-link">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="social-link">
+                            <a href="https://linkedin.com/in/ayush712gupta" class="social-link">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="#" class="social-link">
+                            <a href="https://x.com/ayush712gupta" class="social-link">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="#" class="social-link">
+                            <a href="http://instagram.com/ayush712gupta/" class="social-link">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </div>
