--- a/index.html
+++ b/index.html
@@ -984,16 +984,16 @@
         <div class="container">
             <p>&copy; 2023 Ayush Gupta. All Rights Reserved.</p>
             <div class="social-links justify-content-center">
-                <a href="#" class="social-link">
+                <a href="https://github.com/ayush712gupta" class="social-link">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://linkedin.com/in/ayush712gupta" class="social-link">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://x.com/ayush712gupta" class="social-link">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://instagram.com/ayush712gupta" class="social-link">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
