added resume and some modification in code

--- a/index.html
+++ b/index.html
@@ -563,6 +563,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
+            <img src="https://i.ibb.co/ymYwNgD8/favicon.png" alt="" style="height: 10vh; width: auto;">
             <a class="navbar-brand" href="#">Ayush Gupta</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -797,8 +798,8 @@
                                 <span class="tech-tag">CSS</span>
                             </div>
                             <div class="project-buttons">
-                                <a href="#" class="btn btn-custom btn-sm">Live Demo</a>
-                                <a href="#" class="btn btn-outline-custom btn-sm">GitHub</a>
+                                <a href="https://ayush712gupta.github.io/CyberSecurityAwarenessGame/" class="btn btn-custom btn-sm">Live Demo</a>
+                                <a href="https://github.com/ayush712gupta/CyberSecurityAwarenessGame/" class="btn btn-outline-custom btn-sm">GitHub</a>
                             </div>
                         </div>
                     </div>
