--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
             <p class="text-center mb-4" data-aos="fade-up" data-aos-delay="100">Get a detailed overview of my skills,
                 experience, and projects</p>
             <div class="text-center" data-aos="fade-up" data-aos-delay="200">
-                <a href="#" class="btn resume-btn">
+                <a href="Ayush_Gupta_Developer.pdf" class="btn resume-btn">
                     <i class="fas fa-download me-2"></i>Download Resume (PDF)
                 </a>
             </div>
