--- a/index.html
+++ b/index.html
@@ -798,8 +798,10 @@
                                 <span class="tech-tag">CSS</span>
                             </div>
                             <div class="project-buttons">
-                                <a href="https://ayush712gupta.github.io/CyberSecurityAwarenessGame/" class="btn btn-custom btn-sm">Live Demo</a>
-                                <a href="https://github.com/ayush712gupta/CyberSecurityAwarenessGame/" class="btn btn-outline-custom btn-sm">GitHub</a>
+                                <a href="https://ayush712gupta.github.io/CyberSecurityAwarenessGame/"
+                                    class="btn btn-custom btn-sm">Live Demo</a>
+                                <a href="https://github.com/ayush712gupta/CyberSecurityAwarenessGame/"
+                                    class="btn btn-outline-custom btn-sm">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -1004,7 +1006,7 @@
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="glass-card">
                         <h3 class="mb-4">Send Me a Message</h3>
-                        <form>
+                        <!-- <form>
                             <div class="row">
                                 <div class="col-md-6">
                                     <input type="text" class="form-control" placeholder="Your Name" required>
@@ -1016,7 +1018,34 @@
                             <input type="text" class="form-control" placeholder="Subject" required>
                             <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
                             <button type="submit" class="btn btn-custom w-100">Send Message</button>
+                        </form> -->
+
+                        <form action="https://formsubmit.co/abf0440d3ce491912b989c49afca6bf1" method="POST">
+
+                            <!-- Optional hidden settings -->
+                            <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_template" value="table">
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" name="name" placeholder="Your Name"
+                                        required>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="email" class="form-control" name="email" placeholder="Your Email"
+                                        required>
+                                </div>
+                            </div>
+
+                            <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+
+                            <textarea class="form-control" name="message" rows="5" placeholder="Your Message"
+                                required></textarea>
+
+                            <button type="submit" class="btn btn-custom w-100">Send Message</button>
+
                         </form>
+
                     </div>
                 </div>
             </div>
